# ai-work-traffic-light

./: .gitignore  package.json  readme.md  test.html
.github/workflows/: release.yml
docs/: bug修复记录.md  hook-spike-findings.md
docs/brainstorms/: 2026-06-14-ai-work-traffic-light-requirements.md
docs/plans/: 2026-06-14-001-feat-ai-work-traffic-light-plan.md
spike/: README.md  hook-logger.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity.rs  codex.rs  config.rs  dockicon.rs  installer.rs  main.rs  platform.rs  server.rs  state.rs  taskbar.rs  trayicon.rs
tools/: dev-server.mjs  generate-icon.mjs
