[package]
name = "ai-work-traffic-light"
version = "0.1.0"
description = "AI Work Traffic Light — Claude Code status indicator"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media_Audio",
] }
# 关掉 WebView2 默认右键菜单(返回/刷新/打印…)。版本对齐 tauri 2.11 自带的 webview2-com。
webview2-com = "0.38"

# macOS/Linux：取前台窗口（进程名/应用名）做“聚焦常亮”。内部封装 AppKit / X11；
# Wayland 取不到时返回 Err，我们据此降级。Windows 不用它（用 Win32 Toolhelp）。
[target.'cfg(not(windows))'.dependencies]
active-win-pos-rs = "0.8"

# macOS：提醒时在 dock 显示/闪红黄灯。objc2 用 msg_send! 调 AppKit
# [[NSApplication sharedApplication] setApplicationIconImage:] —— 运行时取类，不依赖
# objc2-app-kit 的类型绑定/feature；png 把红绿灯 RGBA 编成 PNG 给 NSImage initWithData:。
# 两者都已在依赖树里(tauri/tao 的传递依赖)，此处仅显式引用，不引入新下载。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
png = "0.17"

[profile.release]
opt-level = "s"
lto = true
strip = true
